--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,8 @@ python:
   - "3.2"
   - "3.3"
 
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -y gfortran
+
 script: python3 -m unittest letscode.py
