--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ python:
 
 before_install:
   - sudo apt-get update -qq
+
+install:
   - sudo apt-get install -y gfortran
 
 script: python3 -m unittest letscode.py
