--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,7 @@ install:
   - sudo apt-get install -y ksh
   - sudo apt-get install -y racket
   - sudo apt-get install -y scala
+  - sudo apt-get install graphviz
+# sudo apt-get install julia
 
 script: python3 -m unittest letscode.py
