--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,9 @@ install:
   - sudo apt-get install -y racket
   - sudo apt-get install -y scala
   - sudo apt-get install -y graphviz
-  - sudo apt-get install -y php
   - sudo apt-get install -y swi-prolog
   - sudo apt-get install -y valac
 # sudo apt-get install -y julia
+# sudo apt-get install -y php
 
 script: python3 -m unittest letscode.py
