--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,8 @@ install:
   - sudo apt-get install -y r-base
   - sudo apt-get install -y scilab
   - sudo apt-get install -y octave
+  - sudo apt-get install -y clisp
+  - sudo apt-get install -y gforth
 # sudo apt-get install -y julia
 # sudo apt-get install -y php
 # sudo apt-get install -y lua
