--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,8 @@ install:
   - sudo apt-get install -y gforth
   - sudo apt-get install -y open-cobol
   - sudo apt-get install -y ghc
+  - sudo apt-get install -y gdc
+  - sudo apt-get install -y rustc
 # sudo apt-get install -y julia
 # sudo apt-get install -y php
 # sudo apt-get install -y lua
