--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ install:
   - sudo apt-get install -y open-cobol
   - sudo apt-get install -y ghc
   - sudo apt-get install -y gdc
+  - sudo apt-get install -y gccgo
 # sudo apt-get install -y mit-scheme -> "E: Sub-process /usr/bin/dpkg returned an error code (1)" to be investigated
 # sudo apt-get install -y rustc
 # sudo apt-get install -y julia
