--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,8 @@ install:
   - sudo apt-get install -y open-cobol
   - sudo apt-get install -y ghc
   - sudo apt-get install -y gdc
-  - sudo apt-get install -y gccgo
+  - sudo apt-get install -y gnu-smalltalk
+# sudo apt-get install -y gccgo -> not enough to make golang compile properly
 # sudo apt-get install -y mit-scheme -> "E: Sub-process /usr/bin/dpkg returned an error code (1)" to be investigated
 # sudo apt-get install -y rustc
 # sudo apt-get install -y julia
