--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,7 @@ install:
   - sudo apt-get install -y fish
   - sudo apt-get install -y verilog
   - sudo apt-get install -y slsh
+  - sudo apt-get install -y icont
 # sudo apt-get install -y mozart
 # sudo apt-get install -y gccgo -> not enough to make golang compile properly
 # sudo apt-get install -y mit-scheme -> "E: Sub-process /usr/bin/dpkg returned an error code (1)" to be investigated
