--- a/.travis.yml
+++ b/.travis.yml
@@ -45,4 +45,4 @@ install:
 # sudo apt-get install -y php
 # sudo apt-get install -y lua
 
-script: python3 -m unittest letscode.py
+script: python3 -m unittest discover --pattern=*.py
