--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 python:
   - "3.2"
   - "3.3"
+  - "3.4"
 
 before_install:
   - sudo apt-get update -qq
@@ -47,7 +48,9 @@ install:
 # sudo apt-get install -y lua
 
 before_script:
- - pep8 *.py --ignore=E501
+ - pep8 *.py --ignore=E501,E128,E126,E123,E713
+  # to have the list anyway
+ - pep8 *.py --select=E501,E128,E126,E123,E713 || true
 
 script:
  - python3 -m unittest discover --pattern=*.py
