--- a/.travis.yml
+++ b/.travis.yml
@@ -48,9 +48,9 @@ install:
 # sudo apt-get install -y lua
 
 before_script:
- - pep8 *.py --ignore=E501,E128,E126,E123,E713
+ - pep8 *.py --ignore=E501
   # to have the list anyway
- - pep8 *.py --select=E501,E128,E126,E123,E713 || true
+ - pep8 *.py --select=E501 || true
 
 script:
  - python3 -m unittest discover --pattern=*.py
